// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useValidation specs entity error should render component with initial entity error value 1`] = `
<div>
  testError prop
</div>
`;

exports[`useValidation specs entity should render component with initial entity value 1`] = `
<div>
  test prop
</div>
`;

exports[`useValidation specs onUpdateField should fail validation when call to to onUpdateField with empty value and required validator 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value=""
  />
  <span>
    Please fill in this mandatory field.
  </span>
</Fragment>
`;

exports[`useValidation specs onUpdateField should fail validation when call to to onUpdateField with empty value and required validator for complex entity 1`] = `
<Fragment>
  <input
    onChange={[Function]}
  />
  <span />
</Fragment>
`;

exports[`useValidation specs onUpdateField should pass validation when call to to onUpdateField with some value and required validator 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value="updated value"
  />
  <span />
</Fragment>
`;

exports[`useValidation specs onUpdateField should pass validation when call to to onUpdateField with some value and required validator for complex entity 1`] = `
<Fragment>
  <input
    onChange={[Function]}
  />
  <span />
</Fragment>
`;

exports[`useValidation specs onUpdateForm should fail validation when call to to onUpdateForm with empty value and required validator 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value=""
  />
  <span>
    Please fill in this mandatory field.
  </span>
  <button
    onClick={[Function]}
  >
    Validate form
  </button>
</Fragment>
`;

exports[`useValidation specs onUpdateForm should fail validation when call to to onUpdateForm with empty value and required validator for complex entity 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value=""
  />
  <span />
  <button
    onClick={[Function]}
  >
    Validate form
  </button>
</Fragment>
`;

exports[`useValidation specs onUpdateForm should pass validation when call to to onUpdateForm with some value and required validator 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value="init value"
  />
  <span />
  <button
    onClick={[Function]}
  >
    Validate form
  </button>
</Fragment>
`;

exports[`useValidation specs onUpdateForm should pass validation when call to to onUpdateForm with some value and required validator for complex entity 1`] = `
<Fragment>
  <input
    onChange={[Function]}
    value="init value"
  />
  <span />
  <button
    onClick={[Function]}
  >
    Validate form
  </button>
</Fragment>
`;
